[package]
name = "fly-dist-sys-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
env_logger = "0.10.0"
log = "0.4.20"
maelstrom-node = "0.1.6"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tokio-context = "0.1.3"


[[bin]]
name = "echo"
